# pyTOON

./: README.md  pyproject.toml
src/pytoon/: __init__.py  constants.py  decoder.py  encoder.py  errors.py
tests/: test_pytoon.py
