[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytoon"
version = "0.1.0"
description = "Token-Oriented Object Notation (TOON) implementation for Python"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Eric Fetty", email = "eric@kingfetty.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/eric-fetty/pyTOON"
